// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> rendered correctly with Add fixture 1`] = `
<Icon
  name="Add"
  shadow={false}
>
  <Add
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Alarm fixture 1`] = `
<Icon
  name="Alarm"
  shadow={false}
>
  <Alarm
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Alert fixture 1`] = `
<Icon
  name="Alert"
  shadow={false}
>
  <Alert
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Arr fixture 1`] = `
<Icon
  name="Arr"
  shadow={false}
>
  <Cross
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowDown fixture 1`] = `
<Icon
  name="ArrowDown"
  shadow={false}
>
  <ArrowDown
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowLeft fixture 1`] = `
<Icon
  name="ArrowLeft"
  shadow={false}
>
  <ArrowLeft
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowLeft fixture 2`] = `
<Icon
  name="ArrowLeft"
  shadow={false}
>
  <ArrowLeft
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowRight fixture 1`] = `
<Icon
  name="ArrowRight"
  shadow={false}
>
  <ArrowRight
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ArrowUp fixture 1`] = `
<Icon
  name="ArrowUp"
  shadow={false}
>
  <ArrowUp
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Bookings fixture 1`] = `
<Icon
  name="Bookings"
  shadow={false}
>
  <Bookings
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Calendar fixture 1`] = `
<Icon
  name="Calendar"
  shadow={false}
>
  <Calendar
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CaretRight fixture 1`] = `
<Icon
  name="CaretRight"
  shadow={false}
>
  <CaretRight
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CheckBoxChecked fixture 1`] = `
<Icon
  name="CheckBoxChecked"
  shadow={false}
>
  <CheckBoxChecked
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CheckBoxUnchecked fixture 1`] = `
<Icon
  name="CheckBoxUnchecked"
  shadow={false}
>
  <CheckBoxUnchecked
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronDown fixture 1`] = `
<Icon
  name="ChevronDown"
  shadow={false}
>
  <ChevronDown
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronLeft fixture 1`] = `
<Icon
  name="ChevronLeft"
  shadow={false}
>
  <ChevronLeft
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronRight fixture 1`] = `
<Icon
  name="ChevronRight"
  shadow={false}
>
  <ChevronRight
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with ChevronUp fixture 1`] = `
<Icon
  name="ChevronUp"
  shadow={false}
>
  <ChevronUp
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Clock fixture 1`] = `
<Icon
  name="Clock"
  shadow={false}
>
  <Clock
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Cross fixture 1`] = `
<Icon
  name="Cross"
  shadow={false}
>
  <Cross
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with CurvedArrow fixture 1`] = `
<Icon
  name="CurvedArrow"
  shadow={false}
>
  <CurvedArrow
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Delete fixture 1`] = `
<Icon
  name="Delete"
  shadow={false}
>
  <Delete
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with DeleteProfile fixture 1`] = `
<Icon
  name="DeleteProfile"
  shadow={false}
>
  <DeleteProfile
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with DropDown fixture 1`] = `
<Icon
  name="DropDown"
  shadow={false}
>
  <DropDown
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Edit fixture 1`] = `
<Icon
  name="Edit"
  shadow={false}
>
  <Edit
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Ellipsis fixture 1`] = `
<Icon
  name="Ellipsis"
  shadow={false}
>
  <Ellipsis
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Engage fixture 1`] = `
<Icon
  name="Engage"
  shadow={false}
>
  <Engage
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with HealthEngine fixture 1`] = `
<Icon
  name="HealthEngine"
  shadow={false}
>
  <HealthEngine />
</Icon>
`;

exports[`<Icon /> rendered correctly with HealthEngineWithText fixture 1`] = `
<Icon
  name="HealthEngineWithText"
  shadow={false}
>
  <HealthEngineWithText />
</Icon>
`;

exports[`<Icon /> rendered correctly with Help fixture 1`] = `
<Icon
  name="Help"
  shadow={false}
>
  <Help
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Home fixture 1`] = `
<Icon
  name="Home"
  shadow={false}
>
  <Help
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Language fixture 1`] = `
<Icon
  name="Language"
  shadow={false}
>
  <Language
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Lock fixture 1`] = `
<Icon
  name="Lock"
  shadow={false}
>
  <Lock
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Logout fixture 1`] = `
<Icon
  name="Logout"
  shadow={false}
>
  <Logout
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Megaphone fixture 1`] = `
<Icon
  name="Megaphone"
  shadow={false}
>
  <Megaphone
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Patients fixture 1`] = `
<Icon
  name="Patients"
  shadow={false}
>
  <Patients
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Pencil fixture 1`] = `
<Icon
  name="Pencil"
  shadow={false}
>
  <Pencil
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with RadioChecked fixture 1`] = `
<Icon
  name="RadioChecked"
  shadow={false}
>
  <RadioChecked
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with RadioUnchecked fixture 1`] = `
<Icon
  name="RadioUnchecked"
  shadow={false}
>
  <RadioUnchecked
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Search fixture 1`] = `
<Icon
  name="Search"
  shadow={false}
>
  <Search
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Settings fixture 1`] = `
<Icon
  name="Settings"
  shadow={false}
>
  <Settings
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Sync fixture 1`] = `
<Icon
  name="Sync"
  shadow={false}
>
  <Sync
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with Tick fixture 1`] = `
<Icon
  name="Tick"
  shadow={false}
>
  <Tick
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with UserShield fixture 1`] = `
<Icon
  name="UserShield"
  shadow={false}
>
  <UserShield
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with UserShieldPrivacy fixture 1`] = `
<Icon
  name="UserShieldPrivacy"
  shadow={false}
>
  <UserShieldPrivacy
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;

exports[`<Icon /> rendered correctly with View fixture 1`] = `
<Icon
  name="View"
  shadow={false}
>
  <View
    className="icon"
    fill="currentColor"
    height={32}
    width={32}
  />
</Icon>
`;
